[gd_scene load_steps=2 format=3 uid="uid://ch6jcixvh3tih"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1_yh6w5"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yh6w5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Player Name"

[node name="LocalIPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="ServerIP" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Server IP"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
